added figures and paper

--- a/CIA Index.ipynb
+++ b/CIA Index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "6410531d",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "fb477715",
    "metadata": {},
    "outputs": [
@@ -708,12 +708,13 @@
        "[180 rows x 54 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cia.to_csv(\"cia.csv\")\n",
     "cia"
    ]
   },
